# CrewAI_Dev

./: README.md
dev_team/: plan.md  pyproject.toml  report.md  requirements.md
dev_team/src/dev_team/: crew.py  main.py
dev_team/src/dev_team/config/: agents.yaml  tasks.yaml
test_p/: README.md  pyproject.toml
test_p/src/test_p/: crew.py  main.py
