[project]
name = "test_p"
version = "0.1.0"
description = "test_p using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.10.1"
]

[project.scripts]
test_p = "test_p.main:run"
run_crew = "test_p.main:run"
train = "test_p.main:train"
replay = "test_p.main:replay"
test = "test_p.main:test"
run_with_trigger = "test_p.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
